[tool.poetry]
name = "prospecting-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.60"
langchain-core = "^0.3.28"
langchain-community = "^0.3.13"
langchain-openai = "^0.2.14"
langchain-anthropic = "^0.3.1"
tavily-python = "^0.5.0"
pandas = "^2.2.3"
typing-extensions = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
